--- a/contact/index.html
+++ b/contact/index.html
@@ -1,4 +1,4 @@
-<a href="/test/about">about</a>
-<a href="/test/contact">contact</a>
+<a href="/test-2/about">about</a>
+<a href="/test-2/contact">contact</a>
 
 <h1>Contact</h1>
