퍼스널브랜딩 랜딩페이지로 수정

--- a/contact/index.html
+++ b/contact/index.html
@@ -1,4 +1,29 @@
-<a href="/test-2/about">about</a>
-<a href="/test-2/contact">contact</a>
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Contact | Lane Dear</title>
+  <link rel="stylesheet" href="../style.css" />
+</head>
+<body>
+  <header class="nav">
+    <div class="logo">Lane Dear</div>
+    <nav>
+      <a href="../">Home</a>
+      <a href="../about/">About</a>
+    </nav>
+  </header>
 
-<h1>Contact</h1>
+  <section class="content">
+    <h1>Contact</h1>
+    <p>문의나 협업 제안은 아래 이메일로 연락주세요.</p>
+    <p class="email">📧 contact@lanedear.com</p>
+    <p>또는 <a href="https://github.com/qkddnf1244" target="_blank">GitHub</a>을 통해 확인하실 수 있습니다.</p>
+  </section>
+
+  <footer>
+    <p>© 2025 Lane Dear</p>
+  </footer>
+</body>
+</html>
