--- a/about/index.html
+++ b/about/index.html
@@ -1,4 +1,34 @@
-<a href="/test-2/about">about</a>
-<a href="/test-2/contact">contact</a>
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>About | Lane Dear</title>
+  <link rel="stylesheet" href="../style.css" />
+</head>
+<body>
+  <header class="nav">
+    <div class="logo">Lane Dear</div>
+    <nav>
+      <a href="../">Home</a>
+      <a href="../contact/">Contact</a>
+    </nav>
+  </header>
 
-<h1>About</h1>
+  <section class="content">
+    <h1>About Lane Dear</h1>
+    <p>
+      Lane Dear는 단순한 다이어리가 아닙니다.<br>
+      매달 순록이 배달하듯, 당신의 일상에 작은 설렘을 전합니다.
+    </p>
+    <p>
+      브랜드의 핵심은 ‘꾸준한 기록’과 ‘감성적인 경험’.<br>
+      우리는 시간의 흐름 속에서 당신의 성장을 함께 기록합니다.
+    </p>
+  </section>
+
+  <footer>
+    <p>© 2025 Lane Dear</p>
+  </footer>
+</body>
+</html>
