--- a/contact/index.html
+++ b/contact/index.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="../assets/css/style.css">
+<script defer src="../assets/js/script.js"></script>
 <!DOCTYPE html>
 <html lang="ko">
 <head>
